clearfix: fix to prevent margin from collapsing

--- a/public/making_sense_floats/style.css
+++ b/public/making_sense_floats/style.css
@@ -36,8 +36,11 @@ header {
   background-color: #eee;
   border-radius: 0.5em;
 }
+.clearfix::before,
 .clearfix::after {
-  display: block;
+  display: table;
   content: " ";
+}
+.clearfix::after {
   clear: both;
 }
